[tool.poetry]
name = "llama-cpp-engine-verifier"
version = "0.1.0"
description = ""
authors = ["anagri <127566+anagri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
huggingface-hub = "^0.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
