[tool.poetry]
name = "llama-server-compat-tests"
version = "0.1.1"
description = "A comprehensive test suite for validating LLaMA server implementations across different platforms and architectures"
authors = ["anagri <127566+anagri@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "llama_server_compat_tests"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
psutil = "^5.9.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
huggingface-hub = "^0.29.3"
pytest-timeout = "^2.3.1"
py-cpuinfo = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.poetry.plugins.pytest11]
timing = "llama_server_compat_tests.pytest_plugin"
